feat: 支持属性管理 属性继承
